Alterado o projeto do Quartus para incluir o test bench

--- a/rtl/frac_search.qsf
+++ b/rtl/frac_search.qsf
@@ -42,10 +42,6 @@ set_global_assignment -name TOP_LEVEL_ENTITY frac_search
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 13.1
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "15:31:21  JUNE 24, 2014"
 set_global_assignment -name LAST_QUARTUS_VERSION 13.1
-set_global_assignment -name VERILOG_FILE frac_search_tb.v
-set_global_assignment -name VERILOG_FILE frac_search.v
-set_global_assignment -name VERILOG_FILE compute_sad.v
-set_global_assignment -name VERILOG_FILE abs_diff.v
 set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output_files
 set_global_assignment -name MIN_CORE_JUNCTION_TEMP "-40"
 set_global_assignment -name MAX_CORE_JUNCTION_TEMP 125
@@ -55,4 +51,17 @@ set_global_assignment -name EDA_OUTPUT_DATA_FORMAT "VERILOG HDL" -section_id eda
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_global_assignment -name VERILOG_FILE frac_search_tb.v
+set_global_assignment -name VERILOG_FILE frac_search.v
+set_global_assignment -name VERILOG_FILE compute_sad.v
+set_global_assignment -name VERILOG_FILE abs_diff.v
+set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
+set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
+set_global_assignment -name EDA_TIME_SCALE "1 ps" -section_id eda_simulation
+set_global_assignment -name EDA_TEST_BENCH_ENABLE_STATUS TEST_BENCH_MODE -section_id eda_simulation
+set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH frac_search_tb -section_id eda_simulation
+set_global_assignment -name EDA_TEST_BENCH_NAME frac_search_tb -section_id eda_simulation
+set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id frac_search_tb
+set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME frac_search_tb -section_id frac_search_tb
+set_global_assignment -name EDA_TEST_BENCH_FILE frac_search_tb.v -section_id frac_search_tb
