Makefile mais generico

--- a/rtl/Makefile
+++ b/rtl/Makefile
@@ -1,5 +1,8 @@
-frac_search: *.v
+RTL=abs_diff.v compute_sad.v frac_search.v
+VVP=abs_diff compute_sad frac_search
+
+%: %_tb.v $(RTL)
 	iverilog -o $@ $^
 
 clean:
-	rm -rf frac_search
+	rm -rf $(VVP)
