--- a/rtl/frac_search.qsf
+++ b/rtl/frac_search.qsf
@@ -37,7 +37,7 @@
 
 
 set_global_assignment -name FAMILY "Cyclone IV E"
-set_global_assignment -name DEVICE EP4CE6F17A7
+set_global_assignment -name DEVICE EP4CE15F17A7
 set_global_assignment -name TOP_LEVEL_ENTITY frac_search
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 13.1
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "15:31:21  JUNE 24, 2014"
@@ -57,7 +57,6 @@ set_global_assignment -name VERILOG_FILE compute_sad.v
 set_global_assignment -name VERILOG_FILE abs_diff.v
 set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
 set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
-set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
 set_global_assignment -name EDA_TIME_SCALE "1 ps" -section_id eda_simulation
 set_global_assignment -name EDA_TEST_BENCH_ENABLE_STATUS TEST_BENCH_MODE -section_id eda_simulation
 set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH frac_search_tb -section_id eda_simulation
@@ -65,3 +64,8 @@ set_global_assignment -name EDA_TEST_BENCH_NAME frac_search_tb -section_id eda_s
 set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id frac_search_tb
 set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME frac_search_tb -section_id frac_search_tb
 set_global_assignment -name EDA_TEST_BENCH_FILE frac_search_tb.v -section_id frac_search_tb
+set_global_assignment -name STRATIX_DEVICE_IO_STANDARD "2.5 V"
+set_global_assignment -name CYCLONEII_OPTIMIZATION_TECHNIQUE AREA
+set_global_assignment -name SYNTH_TIMING_DRIVEN_SYNTHESIS ON
+set_global_assignment -name ADV_NETLIST_OPT_SYNTH_WYSIWYG_REMAP ON
+set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
