Opção para habilitar blocos 6x6 adicionado ao arquivo de cfg

--- a/hevc/tests/cobracat64.cfg
+++ b/hevc/tests/cobracat64.cfg
@@ -15,3 +15,4 @@ BitstreamFile                 : str_cobracat_64x64_5.bin
 #============ Rate Control ======================
 RateControl                         : 1                # Rate control: enable rate control
 TargetBitrate                       : 100000           # Rate control: target bitrate, in bps
+6x6Blocks                           : 1
